--- a/.github/workflows/python_application.yml
+++ b/.github/workflows/python_application.yml
@@ -1,10 +1,11 @@
 
 name: Python package
 
-on: [push, pull_request]
+on: [push]
 
 env:
   PYTHONPATH: src
+
 jobs:
   build:
 
@@ -19,6 +20,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: set pythonpath
+        run: |
+          echo "PYTHONPATH=src" >> $GITHUB_ENV
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
